--- a/styles.css
+++ b/styles.css
@@ -262,7 +262,7 @@ body {
     outline: none;
 }
 
-@media (min-width:1441px){
+@media (max-width:2560px){
     #landingPage{
         background-size: 130rem, 60rem;
         background-repeat: no-repeat ;
